--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>안녕하세요</h1>
     <ul>
-      <li>반가움1</li>
-      <li>반가움2</li>
+      <li>반가워염1</li>
+      <li>반가워염2</li>
     </ul>
     <h6>반가워요</h6>
     <img
